Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107193

fatal error: 'QtDesigner/uilib_global.h' file not found

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 6.5.0 Beta1
    • 6.5.0 FF
    • Tools: Designer
    • None
    • cfa6ee89f3 (qt/qttools/dev) cfa6ee89f3 (qt/tqtc-qttools/dev)

    Description

      agent:2022/10/04 10:13:07 build.go:394: In file included from /home/qt/work/qt/qttools/src/designer/src/lib/uilib/abstractformbuilder.cpp:4:
      agent:2022/10/04 10:13:07 build.go:394: /home/qt/work/qt/qttools/src/uitools/../designer/src/lib/uilib/abstractformbuilder.h:7:10: fatal error: 'QtDesigner/uilib_global.h' file not found
      agent:2022/10/04 10:13:07 build.go:394: #include <QtDesigner/uilib_global.h>
      agent:2022/10/04 10:13:07 build.go:394:          ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2022/10/04 10:13:07 build.go:394: 1 error generated.
      agent:2022/10/04 10:13:07 build.go:394: em++: error: '/opt/emsdk/upstream/bin/clang++ -target wasm32-unknown-emscripten -DEMSCRIPTEN -D__EMSCRIPTEN_major__=3 -D__EMSCRIPTEN_minor__=1 -D__EMSCRIPTEN_tiny__=10 -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/SDL --sysroot=/opt/emsdk/upstream/emscripten/cache/sysroot -Xclang -iwithsysroot/include/compat -x c++ -E -P -I/home/qt/work/qt/qttools/build/target/src/uitools/UiTools_autogen/include -I/home/qt/work/qt/qttools/build/target/include -I/home/qt/work/qt/qttools/build/target/include/QtUiTools -I/home/qt/work/qt/qttools/src/uitools -I/home/qt/work/qt/qttools/build/target/src/uitools -I/home/qt/work/qt/qttools/src/uitools/../designer/src/lib/uilib -I/home/qt/work/qt/qttools/build/target/include/QtUiTools/6.5.0 -I/home/qt/work/qt/qttools/build/target/include/QtUiTools/6.5.0/QtUiTools -I/home/qt/work/qt/qttools/build/target/include/QtUiPlugin -I/home/qt/work/qt/qttools/src/uiplugin -I/home/qt/work/qt/qttools/build/target/src/uiplugin -isystem /home/qt/work/install/target/include/QtCore -isystem /home/qt/work/install/target/include -isystem /home/qt/work/install/target/mkspecs/wasm-emscripten -isystem /home/qt/work/install/target/include/QtGui -isystem /home/qt/work/install/target/include/QtWidgets -isystem /home/qt/work/install/target/include/QtOpenGLWidgets -isystem /home/qt/work/install/target/include/QtOpenGL -MD -MF src/uitools/CMakeFiles/UiTools.dir/__/designer/src/lib/uilib/abstractformbuilder.cpp.o.d -MT src/uitools/CMakeFiles/UiTools.dir/__/designer/src/lib/uilib/abstractformbuilder.cpp.o -DQFORMINTERNAL_NAMESPACE -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_UITOOLS_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DESIGNER -DQT_DESIGNER_STATIC -DQT_DISABLE_DEPRECATED_UP_TO=0x050000 -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_OPENGLWIDGETS_LIB -DQT_OPENGL_LIB -DQT_UIPLUGIN_LIB -DQT_USE_QSTRINGBUILDER -DQT_WARN_DEPRECATED_UP_TO=0x070000 -DQT_WIDGETS_LIB -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DNDEBUG -O2 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -std=c++17 /home/qt/work/qt/qttools/src/designer/src/lib/uilib/abstractformbuilder.cpp' failed (returned 1)
      agent:2022/10/04 10:13:07 build.go:394: Sccache command failed, re-try calling build tool directly
      agent:2022/10/04 10:13:07 build.go:394: In file included from /home/qt/work/qt/qttools/src/designer/src/lib/uilib/abstractformbuilder.cpp:4:
      agent:2022/10/04 10:13:07 build.go:394: /home/qt/work/qt/qttools/src/uitools/../designer/src/lib/uilib/abstractformbuilder.h:7:10: fatal error: 'QtDesigner/uilib_global.h' file not found
      agent:2022/10/04 10:13:07 build.go:394: #include <QtDesigner/uilib_global.h>
      agent:2022/10/04 10:13:07 build.go:394:          ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2022/10/04 10:13:07 build.go:394: 1 error generated.
      

      Build log: https://testresults.qt.io/logs/qt/qttools/68f87b79557d0fb9bf13c0f904c87b162ecf23bf/LinuxopenSUSE_15_3x86_64LinuxWebAssemblyx86_64GCCqtci-linux-openSUSE-15.3-x86_64-50-4eac34DisableTests_Sccache_UseConfigure/aba74715956f48b3844c64e3a30b1293ba8b2435/build_1678578159/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qttools/tasks/1678578028

      Tested changes (refs/builds/qtci/dev/1664877732):
      https://codereview.qt-project.org/c/qt/qttools/+/436291/3 Replace module includes in headers
      https://codereview.qt-project.org/c/qt/qttools/+/436425/2 Update dependencies on 'dev' in qt/qttools

      Attachments

        For Gerrit Dashboard: QTBUG-107193
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes