Skip checks for shared public header files of QtDesigner module

These recently began causing fatal warnings.

Fixes: QTBUG-107193
Change-Id: I459d5688a925de8f669c11501cfa84b4d69d7925
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>